--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Countries of the World</h1>
+    <p id="counter">Crossed out countries: 0</p>
     <ul id="country-list"></ul>
     <script src="script.js"></script>
 </body>
