--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
 </head>
 <body>
     <h1>Countries of the World</h1>
-    <p id="counter">Crossed out countries: 0</p>
+    <p id="counter">
+        Total countries: <span id="total-countries">0</span> |
+        Crossed out countries: <span id="crossed-out-count">0</span> |
+        Remaining countries: <span id="remaining-countries">0</span>
+    </p>
     <ul id="country-list"></ul>
     <script src="script.js"></script>
 </body>
