--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         Crossed out countries: <span id="crossed-out-count">0</span> |
         Remaining countries: <span id="remaining-countries">0</span>
     </p>
+    <input type="text" id="search-bar" placeholder="Search for a country..." />
     <ul id="country-list"></ul>
     <script src="script.js"></script>
 </body>
