--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         Remaining countries: <span id="remaining-countries">0</span>
     </p>
     <input type="text" id="search-bar" placeholder="Search for a country..." />
+    <button id="clear-crossed-out">Clear Crossed Out Countries</button>
     <ul id="country-list"></ul>
     <script src="script.js"></script>
 </body>
